✨ Feat: update packages and fix overflow

--- a/src/global/style/base/_base.scss
+++ b/src/global/style/base/_base.scss
@@ -4,7 +4,6 @@ html
 {
   scroll-behavior: smooth;
   scrollbar-gutter: stable;
-  overflow-x: hidden;
   width: 100%;
   font-size: 62.5%;
 }
