--- a/src/global/style/util/_font_weight.scss
+++ b/src/global/style/util/_font_weight.scss
@@ -2,26 +2,41 @@
 {
   @if($weight == 'light')
   {
-    font-weight: 300;
+    &
+    {
+      font-weight: 300;
+    }
   }
 
   @if($weight == 'regular')
   {
-    font-weight: 400;
+    &
+    {
+      font-weight: 400;
+    }
   }
 
   @if($weight == 'semi_bold')
   {
-    font-weight: 600;
+    &
+    {
+      font-weight: 600;
+    }
   }
 
   @if($weight == 'bold')
   {
-    font-weight: 700;
+    &
+    {
+      font-weight: 700;
+    }
   }
 
   @if($weight == 'extra_bold')
   {
-    font-weight: 800;
+    &
+    {
+      font-weight: 800;
+    }
   }
 }
